basic code share scenarios defined

--- a/app/App_Resources/web/index.html
+++ b/app/App_Resources/web/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
 
-    <my-app>
+    <mono-app>
       ...
-    </my-app>
+    </mono-app>
 
     <script src="/polyfills.bundle.js"></script>
     <script src="/vendor.bundle.js"></script>
