added abstract method to common menu class

--- a/app/client/app.component.tns.html
+++ b/app/client/app.component.tns.html
@@ -1,6 +1,6 @@
 <StackLayout>
     <page-router-outlet>
-        <Button (tap)="toggled = !toggled" #menuIcon text="Menu"></Button>
+        <Button (tap)="toggled = !toggled" text="Menu"></Button>
         <mono-menu [toggled]="toggled"></mono-menu>
     </page-router-outlet>
 </StackLayout>
