+Web app design (provisional)

--- a/app/client/pages/home/home.component.web.html
+++ b/app/client/pages/home/home.component.web.html
@@ -6,7 +6,7 @@
             <hr class="m-y-2">
             <p>Navigation is shared..</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" routerLink="/products" role="button">Let's go to next page!</a>
+                <a class="btn button" routerLink="/products" role="button">Let's go to next page!</a>
             </p>
         </div>
     </div>
