--- a/app/client/pages/products/products.component.web.html
+++ b/app/client/pages/products/products.component.web.html
@@ -18,8 +18,8 @@
 
                 <div class="card-block text-sm-right">
                     <p>{{product.price | currency:'EUR'}}</p>
-                    <a (click)="select(product)" class="btn btn-primary">Load</a>
-                    <a (click)="remove(product)" class="btn btn-primary">Remove</a>
+                    <a (click)="select(product)" class="btn button">Load</a>
+                    <a (click)="remove(product)" class="btn button-rm">Remove</a>
                 </div>
             </div>
         </div>
