--- a/app/client/pages/products/products.component.tns.html
+++ b/app/client/pages/products/products.component.tns.html
@@ -15,9 +15,9 @@
                                 <Label row="1" col="0" [text]="product.description" margin="5" class="h2"></Label>
                                 <Label row="0" col="1" [text]="product.price | currency:'EUR'" margin="5" class="h2"></Label>
                             </GridLayout>
-                            <StackLayout orientation="horizontal" padding="5" >
-                                <Button (tap)="select(product)" text="Load" class="product-button" width="50%"></Button>
-                           	    <Button (tap)="remove(product, $event)" text="Destroy!" class="product-button" width="50%"></Button>
+                            <StackLayout orientation="horizontal" padding="5 10">
+                                <Button (tap)="select(product)" text="Load" class="product-button" width="43%"></Button>
+                           	    <Button (tap)="remove(product, $event)" text="Destroy!" class="product-button" width="43%"></Button>
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
