--- a/app/client/pages/products/products.component.tns.html
+++ b/app/client/pages/products/products.component.tns.html
@@ -17,7 +17,7 @@
                             </GridLayout>
                             <StackLayout orientation="horizontal" padding="5 10">
                                 <Button (tap)="select(product)" text="Load" class="product-button" width="43%"></Button>
-                           	    <Button (tap)="remove(product, $event)" text="Destroy!" class="product-button" width="43%"></Button>
+                           	    <Button (tap)="remove(product, productElement)" text="Destroy!" class="product-button" width="43%"></Button>
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
