code linting & clean up

--- a/app/client/app.component.tns.html
+++ b/app/client/app.component.tns.html
@@ -1,6 +1,6 @@
 <GridLayout>
     <GridLayout rows="auto,*" class="page">
-        <mono-menu></mono-menu>
+        <pang-menu></pang-menu>
         <GridLayout row="1">
             <router-outlet></router-outlet>
         </GridLayout>
