+ nativescript-theme-core .scss's imported on tns + _variables.scss updated + many design fixes

--- a/app/client/app.component.tns.html
+++ b/app/client/app.component.tns.html
@@ -1,4 +1,4 @@
-<GridLayout>
+<GridLayout android:class="android" ios:class="ios">
     <GridLayout rows="auto,*" class="page">
         <pang-menu></pang-menu>
         <GridLayout row="1">
