--- a/app/client/pages/products/products.component.web.html
+++ b/app/client/pages/products/products.component.web.html
@@ -18,8 +18,8 @@
 
                 <div class="card-block text-sm-right">
                     <p>{{product.price | currency:'EUR'}}</p>
-                    <button (click)="select(product)" class="btn button">Load</button>
-                    <button (click)="remove(product)" class="btn button-rm">Remove</button>
+                    <button (click)="select(product)" class="btn btn-full">Load</button>
+                    <button (click)="remove(product)" class="btn btn-outline">Remove</button>
                 </div>
             </div>
         </div>
