--- a/app/client/pages/home/home.component.tns.html
+++ b/app/client/pages/home/home.component.tns.html
@@ -1,12 +1,11 @@
-<GridLayout rows="*,9*">
-    <GridLayout row="0" columns="*,6*,*" class="action-bar">
-        <Label col="1" [text]="title" class="h1 bold" verticalAlignment="center"></Label>
-    </GridLayout>
-    <GridLayout row="1" rows="*,*" padding="5" class="page">
-        <StackLayout row="0">
-            <Label [text]="description" textWrap="true" class="h2"></Label>
-            <Label text="Navigation is shared.." class="h2"></Label>
-        </StackLayout>
-        <Button row="1" [nsRouterLink]="['/products']" text="Let's go to next page!" class="button" height="50" width="60%"></Button>
-    </GridLayout>
+<GridLayout rows="auto,auto,*" class="android">
+    <StackLayout row="0" class="bg-primary">
+        <Label [text]="title" class="title font-weight-bold m-10"></Label>
+    </StackLayout>
+    <StackLayout row="1" class="bg-gray p-10 fade-in">
+        <Label [text]="description" textWrap="true" class="body h3 m-5"></Label>
+        <StackLayout class="hr-light m-5"></StackLayout>
+        <Label text="Navigation is shared.." class="footnote m-5"></Label>
+        <Button [nsRouterLink]="['/products']" text="Let's go to next page!" class="btn btn-outline btn-active img-rounded m-5"></Button>
+    </StackLayout>
 </GridLayout>
