Fixed jumbotron not expanding

--- a/app/client/pages/home/home.component.web.html
+++ b/app/client/pages/home/home.component.web.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="jumbotron">
+        <div class="col-md-12 jumbotron">
             <h1 class="display-3">{{title}}</h1>
             <p class="lead">{{description}}</p>
             <hr class="m-y-2">
